# HomeHive

./: .gitignore  CMakeCache.txt  CMakeLists.txt  HomeHive  Makefile  README.md  ca.uwo.cs3307.homehive.gschema.xml  cmake_install.cmake  dox.config  gschemas.compiled  install_manifest.txt  main.cpp  main2.cpp  test  test.cpp
event/: IntervalView.cpp  IntervalView.h  SettingsEvent.cpp  SettingsEvent.h  Timer.cpp  Timer.h
gui/: Alarm.cpp  Alarm.h  App.cpp  App.h  BaseView.cpp  BaseView.h  GuiHelpers.cpp  GuiHelpers.h  HomeView.cpp  HomeView.h  settings.cpp  settings.h  weather.cpp  weather.h
gui/components/: AlarmComponent.cpp  AlarmComponent.h  DateTimeComponent.cpp  DateTimeComponent.h  GreetingComponent.cpp  GreetingComponent.h  GuiComponent.cpp  GuiComponent.h  NewsComponent.cpp  NewsComponent.h  WeatherComponent.cpp  WeatherComponent.h
helpers/: Logger.cpp  Logger.h
html/: Alarm_8cpp.html  Alarm_8cpp__incl.dot  Alarm_8h.html  Alarm_8h__dep__incl.dot  Alarm_8h__incl.dot  Alarm_8h_source.html  App_8cpp.html  App_8cpp__incl.dot  App_8h.html  App_8h__dep__incl.dot  App_8h__incl.dot  App_8h_source.html  BaseView_8cpp.html  BaseView_8cpp__incl.dot  BaseView_8h.html  BaseView_8h__dep__incl.dot  BaseView_8h__incl.dot  BaseView_8h_source.html  GuiHelpers_8cpp.html  GuiHelpers_8cpp__incl.dot  GuiHelpers_8h.html  GuiHelpers_8h__dep__incl.dot  GuiHelpers_8h__incl.dot  GuiHelpers_8h_source.html  HomeView_8cpp.html  HomeView_8cpp__incl.dot  HomeView_8h.html  HomeView_8h__dep__incl.dot  HomeView_8h__incl.dot  HomeView_8h_source.html  IntervalView_8cpp.html  IntervalView_8cpp__incl.dot  IntervalView_8h.html  IntervalView_8h__dep__incl.dot  IntervalView_8h_source.html  SettingsEvent_8cpp.html  SettingsEvent_8cpp__incl.dot  SettingsEvent_8h.html  SettingsEvent_8h__dep__incl.dot  SettingsEvent_8h__incl.dot  (+113 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  (+41 more)
latex/: Alarm_8cpp.tex  Alarm_8cpp__incl.dot  Alarm_8h.tex  Alarm_8h__dep__incl.dot  Alarm_8h__incl.dot  App_8cpp.tex  App_8cpp__incl.dot  App_8h.tex  App_8h__dep__incl.dot  App_8h__incl.dot  BaseView_8cpp.tex  BaseView_8cpp__incl.dot  BaseView_8h.tex  BaseView_8h__dep__incl.dot  BaseView_8h__incl.dot  GuiHelpers_8cpp.tex  GuiHelpers_8cpp__incl.dot  GuiHelpers_8h.tex  GuiHelpers_8h__dep__incl.dot  GuiHelpers_8h__incl.dot  HomeView_8cpp.tex  HomeView_8cpp__incl.dot  HomeView_8h.tex  HomeView_8h__dep__incl.dot  HomeView_8h__incl.dot  IntervalView_8cpp.tex  IntervalView_8cpp.tex.tmp  IntervalView_8cpp__incl.dot  IntervalView_8h.tex  IntervalView_8h__dep__incl.dot  SettingsEvent_8cpp.tex  SettingsEvent_8cpp__incl.dot  SettingsEvent_8h.tex  SettingsEvent_8h__dep__incl.dot  SettingsEvent_8h__incl.dot  Timer_8cpp.tex  Timer_8cpp__incl.dot  Timer_8h.tex  Timer_8h__dep__incl.dot  Timer_8h__incl.dot  (+58 more)
request/: Unsplash.cpp  Unsplash.h  UnsplashBackground.cpp  UnsplashBackground.h  news.cpp  news.h  request.cpp  request.h  weather.cpp  weather.h
resources/: homeview.css
